--- a/theme/sass/_base.scss
+++ b/theme/sass/_base.scss
@@ -31,6 +31,15 @@ $width-sidebar-first: $width-sidebar-first-region + $width-header;
 $width-sidebar-second:360px;
 $width-sidebar-second-small:260px;
 
+// cards
+$card-gutter: 5px;
+$card-small-width: 170px;
+$card-small-height: 210px;
+$card-small-image-height: 170px;
+$card-large-width: 370px;
+$card-large-height: 370px;
+$card-large-image-height: 370px;
+
 
 //imports
 @import "compass/support";  // Add Compass' IE and vendor prefix support variables.
