landing page fixes, ui updates, connection state

--- a/theme/sass/_base.scss
+++ b/theme/sass/_base.scss
@@ -30,6 +30,7 @@ $width-sidebar-first-region: 280px;
 $width-sidebar-first: $width-sidebar-first-region + $width-header;
 $width-sidebar-second:360px;
 $width-sidebar-second-small:260px;
+$mini-img-width: 60px;
 
 // cards
 $card-gutter: 5px;
@@ -39,6 +40,7 @@ $card-small-image-height: 170px;
 $card-large-width: 370px;
 $card-large-height: 400px;
 $card-large-image-height: 370px;
+
 
 
 //imports
