--- a/theme/sass/_cards.scss
+++ b/theme/sass/_cards.scss
@@ -3,8 +3,8 @@
 
 
   // size changes
-  @if $size == 'large' {
-    // large
+  @if $size == 'large' { // large overrides ///////////////////
+
     width: $card-large-width;
     height: $card-large-height;
     .image {
@@ -26,14 +26,81 @@
     p.item-sub-sub-title {
       display: block;
     }
-  } @else {
-    // small
+
+  } @else if $size == 'mini'{ // mini (sidebar) overrides ///////////////////
+
+    height: $mini-img-width;
+    margin: 5px 0;
+    float: none;
+    display: block;
+    &:hover {
+      //background: #eee;
+      .actions-wrapper {
+        opacity: 1;
+      }
+    }
+    a {
+      padding: 0;
+    }
+    .actions-wrapper,
+    .image {
+      float: left;
+      width: $mini-img-width !important;
+      height: $mini-img-width;
+      min-width: $mini-img-width;
+      margin-right: 8px;
+    }
+    .actions-wrapper {
+      width: auto !important;
+      z-index: 9;
+      background: none;
+      opacity: 0;
+      box-shadow: 1px 0 3px rgba(0,0,0,0.2);
+      margin-right: 0;
+      .actions {
+        margin-top: 24px;
+        .btn {
+          float: right;
+          width: 24px;
+          padding-top: 8px;
+          color: #ddd;
+        }
+      }
+      .play {
+        top: 0px;
+        left: 0px;
+        bottom: 0;
+        font-size: 100%;
+        width: $mini-img-width;
+        height: $mini-img-width;
+        background: rgba(0,0,0,0.5);
+        opacity: 0;
+        color: #fff;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+
+    .details {
+      p {
+        position: relative;
+        z-index: 10;
+        &.item-sub-title {
+          margin-right: 70px; // space for context buttons
+        }
+      }
+    }
+
+  } @else { // small (default) //////////////////////
+
     min-width: $card-small-width;
     height: $card-small-height;
     .image {
       min-width: $card-small-width;
       height: $card-small-image-height;
     }
+
   }
 
 
@@ -47,7 +114,6 @@
   display: inline-block;
   margin: 5px;
   border-radius: 2px;
-  //box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   background: #FFF;
   overflow: hidden;
   vertical-align: top;
@@ -57,7 +123,7 @@
 
   .image {
     display: block;
-    background-color: #ddd;
+    background-color: #adb3b6;
     background-size: cover;
     width: 100%;
     box-shadow: inset 0 0 16px 5px rgba(0, 0, 0, 0.07);
@@ -72,7 +138,6 @@
     cursor: pointer;
     overflow: hidden;
     position: relative;
-
     &.item-title {
       font-size: 15px;
       line-height: 17px;
